# gdm-2.4.1.3-5

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure  gdm.spec
config/: Makefile.in
daemon/: Makefile.in  server.h
gui/: Makefile.in  gdmflexiserver-xnest.desktop  gdmflexiserver.desktop  gdmphotosetup.desktop  gdmsetup.desktop
gui/greeter/: Makefile.in
gui/greeter/themes/: Makefile.in
gui/greeter/themes/circles/: GdmGreeterTheme.desktop  Makefile.in  circles.xml
gui/greeter/themes/happygnome/: GdmGreeterTheme.desktop  Makefile.in  happygnome.xml
pixmaps/: Makefile.in
po/: am.gmo  am.po  ar.gmo  ar.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gdm-2.4.pot  gl.gmo  gl.po  he.gmo  he.po  hu.gmo  hu.po  it.gmo  (+49 more)
utils/: Makefile.in
vicious-extensions/: ChangeLog  Makefile.am  Makefile.in  README  glade-helper.c  glade-helper.h  test-ve-config.c  ve-config.c  ve-config.h  ve-misc.c  ve-misc.h  ve-miscui.c  ve-miscui.h  ve-signal.c  ve-signal.h
